<resources>
    <string name="app_name">Soso Taxi</string>
    <string name="title_activity_main">Soso Taxi</string>
    <string name="title_activity_login">Soso Taxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!--    HomeFragment-->
    <string name="recommend">为您推荐的最佳上车地点</string>
    <string name="book">时间：</string>
    <string name="passenger">乘车人：</string>


    <string name="menu_home">Home</string>
    <string name="btn_login_skip">跳过</string>
    <string name="title_enter_phone">输入手机号</string>
    <string name="hint_enter_phone">该手机号仅用于联系您</string>
    <string name="placeholder_enter_phone">请输入手机号</string>
    <string name="btn_continue">继续</string>
    <string name="placeholder_area_code">+86 ▼</string>
    <string name="placeholder_search_area_code">点击此处搜索</string>
    <string name="title_select_area_code">选择区号</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_confirm">确认</string>
    <string name="feedback_create_password">密码长度为8-16位\n至少包含字母、数字、标点符号其中两种</string>
    <string name="placeholder_enter_password">请输入密码</string>
    <string name="placeholder_enter_password_again">请再次输入密码</string>
    <string name="hint_create_password">您可以通过手机号及该密码登陆搜搜网约车</string>
    <string name="title_create_password">创建密码</string>
    <string name="hint_enter_password">使用密码登陆搜搜网约车</string>
    <string name="title_enter_password">输入密码</string>
    <string name="feedback_enter_password">密码为8至16位字符</string>
    <string name="hint_enter_verification_code">验证码已发送至</string>
    <string name="title_enter_verification_code">输入验证码</string>
    <string name="feedback_enter_verification_code">6位数字验证码</string>
    <string name="btn_verification_code_resend">重新发送</string>
    <string name="regex_password">^(?![0-9]+$)(?![a-z]+$)(?![A-Z]+$)(?!([^(0-9a-zA-Z)]|[\\(\\)])+$)([^(0-9a-zA-Z)]|[\\(\\)]|[a-z]|[A-Z]|[0-9]){8,16}$</string>
    <string name="error_password_different">两次输入不一致</string>
    <string name="error_password_not_match">密码不符合要求</string>
    <string name="error_password_incorret">密码错误</string>
    <string name="error_verification_code">验证码错误</string>
    <string name="error_register_failed">注册失败</string>


    <string name="menu_order_label">我的订单</string>
    <string name="menu_wallet_label">我的钱包</string>

    <string name="check_time_by_order">按时间查看订单</string>
    <string name="check_right_now">查看当前状况</string>
    <string name="wallet_payment_setting">"支付设置     "</string>
    <string name="payment_setting_label">支付方式</string>
    <string name="payment_btn_label">充值</string>
    <string name="assert_textView_label">余额（元）</string>
    <string name="charge_money_label">我的充值</string>
    <string name="coupon_label">优惠券</string>
    <string name="edit_personal_data_label">"编辑资料      "</string>
    <string name="edit_done_label">"完成       "</string>

    <string name="industry_choice_label">行业</string>
    <string name="hint_verification_code_sent">验证码已发送</string>

    <!--route_activity-->
    <string name="going_to_destination">正在前往目的地</string>
    <string name="fasten_safebelt">请您系好安全带。疫情期间，还请您戴好口罩，安全出行。</string>
    <string name="license_example">桂A·681UM</string>
    <string name="car_info">日产轩逸·白色</string>
    <string name="destination">目的地：</string>
    <string name="destination_example">首都机场</string>
    <string name="driver">陈师傅</string>
    <string name="score_example">4.8</string>
    <string name="warning">报警</string>
    <string name="fail_get_on_car">我没上车</string>
    <string name="change_destination">修改终点</string>
    <string name="share">分享行程</string>
    <string name="route_title">行程中</string>


    <string name="setting_label">设置</string>
    <string name="usual_address_label">常用地址</string>
    <string name="emergency_contact_label">紧急联系人</string>
    <string name="phone_edit_text">手机号码</string>
    <string name="name_edit_text">联系人姓名</string>
    <string name="confirm_button">确认添加</string>
    <string name="law_claim_label">平台规则与法律条款</string>
    <string name="about_us_label">关于</string>
    <string name="user_guide_label">用户指南</string>

    <string name="error_phone_content_empty">手机号或短信内容不能为空</string>
    <string name="hint_send_successful">发送成功</string>
    <string name="error_phone_empty">手机号不能为空</string>
    <string name="hint_permission_send_message_restrict">请授予此权限用于与司机短信联系</string>
    <string name="hint_permission_call_restrict">请授予此权限用于与司机电话联系</string>

</resources>