<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.CreatePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewCreatePasswordTitle"
            style="@style/Login.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:text="@string/title_create_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCreatePasswordHint"
            style="@style/Login.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_title_spacing"
            android:text="@string/hint_create_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCreatePasswordTitle" />

        <EditText
            android:id="@+id/editTextCreatePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_title_edit_text_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:ems="10"
            android:hint="@string/placeholder_enter_password"
            android:inputType="textPassword"
            android:maxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCreatePasswordHint" />

        <EditText
            android:id="@+id/editTextCreatePasswordConfirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_edit_text_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:ems="10"
            android:hint="@string/placeholder_enter_password_again"
            android:inputType="textPassword"
            android:maxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCreatePassword" />

        <TextView
            android:id="@+id/textViewCreatePasswordFeedback"
            style="@style/Login.Feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_edit_text_feedback_spacing"
            android:text="@string/feedback_create_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCreatePasswordConfirmed" />

        <Button
            android:id="@+id/buttonCreatePasswordConfirm"
            style="@style/Login.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_feedback_button_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:background="@color/colorDisabledButton"
            android:enabled="false"
            android:text="@string/btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCreatePasswordFeedback" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>