<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.EnterPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewEnterPasswordTitle"
            style="@style/Login.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_vertical_margin"
            android:text="@string/title_enter_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEnterPasswordHint"
            style="@style/Login.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_title_spacing"
            android:text="@string/hint_enter_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewEnterPasswordTitle" />

        <EditText
            android:id="@+id/editTextEnterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_title_edit_text_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:ems="10"
            android:hint="@string/placeholder_enter_password"
            android:inputType="textPassword"
            android:maxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewEnterPasswordHint" />

        <TextView
            android:id="@+id/textViewEnterPasswordFeedback"
            style="@style/Login.Feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_edit_text_feedback_spacing"
            android:maxEms="14"
            android:text="@string/feedback_enter_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEnterPassword" />

        <Button
            android:id="@+id/buttonEnterPasswordConfirm"
            style="@style/Login.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_feedback_button_spacing"
            android:layout_marginEnd="@dimen/login_horizontal_margin"
            android:background="@color/colorDisabledButton"
            android:enabled="false"
            android:text="@string/btn_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterPasswordFeedback" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>