<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/head_imageView"
            android:layout_width="@dimen/head_photo_width"
            android:layout_height="@dimen/head_photo_height"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_default_head_photo_v2"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/username"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDarkLowVersion"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="27dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/user_otherInfo"
        android:layout_width="390dp"
        android:layout_height="@dimen/nav_vip_textView"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/nav_vip_textview_cornor"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorPrimaryDarkLowVersion"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="121dp" />
</LinearLayout>